bashrc and tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
 set -g automatic-rename on
 # Status bar content
 set -g status-interval 5
-set -g status-left '#S 🚀  '
+set -g status-left '#[fg=colour156,bold]#S 🚀  '
 # set -g status-right '#[fg=colour1]#(uptime | awk '{print $3,$4,$5}' | sed 's/,//')'
 set -g status-right '#[fg=colour1]#(uptime | awk '\''{print $3,$4,$5}'\'' | sed '\''s/,$//'\'')'
 set -ag status-right '#[fg=colour8]#(tmux-mem-cpu-net) #[fg=default]%l:%M %Z'
