--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Nice colors
-set -g default-terminal 'tmux-256color'
-set -ga terminal-overrides ",tmux-256color:Tc:sitm=\E[3m,xterm-256color-italic:Tc"
+# set -g default-terminal 'tmux-256color'
+# set -ga terminal-overrides ",tmux-256color:Tc:sitm=\E[3m,xterm-256color-italic:Tc"
+set -g default-terminal "xterm-256color"
 set -g status-style bg=colour235
 
 set -g pane-border-style 'bg=default,fg=#000000'
